<resources>
    <string name="android">Android - это круто,но сложна</string>
    <string name="app_name">Playlist Maker</string>
    <string name="title_appname">Playlist Maker</string>
    <string name="search_name">Поиск</string>
    <string name="medialibrary_name">Медиатека</string>
    <string name="settings_name">Настройки</string>
    <string name="darktheme_name">Темная тема</string>
    <string name="share_name">Поделиться приложением</string>
    <string name="support_name">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="tittle_Send">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_Send">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="text_share">https://practicum.yandex.ru/android-developer/</string>
    <string name="text_useragreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="my_email">decardcain21@gmail.com</string>
    <string name="main_messege">Android - это круто!</string>
    <string name="error">error</string>
    <string name="act_search_disconnect">Проблемы со связью\n\n Загрузка не удалась. \n Проверьте подключение к интернету</string>
    <string name="act_search_nothing">Ничего не нашлось</string>
    <string name="act_search_fine">Аминь?</string>
    <string name="actplayer_duration">Длительность</string>
    <string name="actplayer_album">Альбом</string>
    <string name="actplayer_year">Год</string>
    <string name="actplayer_genre">Жанр</string>
    <string name="actplayer_country">Страна</string>
    <string name="default_timer">00:30</string>
    <string name="isDone_timer">00:00</string>
    <string name="featured_trucks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="medialibrary_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_is_empty">Вы не создали\nни одного плейлиста</string>
    <string name="header_agreement">Соглашение</string>
    <string name="agreement_offer">Оферта на оказание образовательных услуг\n дополнительного\n образования\n Яндекс.Практикум\n для физических лиц</string>
    <string name="agreement_tv_link">Данный документ является действующим,\n если расположен по адресу: https://yandex.ru/legal/practicum_offer \n\nРоссийская Федерация, город Москва</string>
    <string name="agreement_header_terms">1. ТЕРМИНЫ</string>
    <string name="agreement_terms_text">Понятия, используемые в Оферте, означают\n следующее:\n\n Авторизованные адреса — адреса\n электронной почты каждой Стороны.\n Авторизованным адресом Исполнителя\n является адрес электронной почты, указанный\n в разделе 11 Оферты. Авторизованным\n адресом Студента является адрес\n электронной почты, указанный Студентом в\n Личном кабинете.\n\n Вводный курс — начальный Курс обучения по\n представленным на Сервисе Программам\n обучения в рамках выбранной Студентом\n Профессии или Курсу, рассчитанный на\n определенное количество часов\n самостоятельного обучения, который\n предоставляется Студенту единожды при\n регистрации на Сервисе на безвозмездной\n основе. В процессе обучения в рамках\n Вводного курса Студенту предоставляется возможность ознакомления с работой Сервиса\n и определения возможности Студента продолжить обучение в рамках \nПолного курса по выбранной Студентом Программе обучения. Точное количество часов обучения в рамках Вводного курса зависит от выбранной Студентом Профессии или Курса и определяется в Программе обучения, размещенной на Сервисе. Максимальный срок освоения Вводного курса составляет 1 (один) год с даты начала обучения.</string>
    <string name="newplaylist_name">Новый плейлист</string>
    <string name="newplaylist_hint_name">Название*</string>
    <string name="newplaylist_hint_description">Описание</string>
    <string name="playlistviewholder_tracks">треков</string>
    <string name="playlistviewholder_track">трек</string>
    <string name="create">Создать</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share">Поделиться</string>
    <plurals name="numberOfSizePlaylist">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>