<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker2">

    <TextView
        android:id="@+id/tittle"
        style="@style/activity_settings_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/settings_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tittle">

        <LinearLayout
            android:id="@+id/llswitch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_settings_llheight"
            android:gravity="center">

            <TextView
                style="@style/settings_activity_viewtextstyle"
                android:text="@string/darktheme_name" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/bswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:switchMinWidth="32dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llshare"
            style="@style/setings_activity_llbutton">

            <TextView
                style="@style/settings_activity_viewtextstyle"
                android:text="@string/share_name" />

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_share_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llsupport"
            style="@style/setings_activity_llbutton">

            <TextView
                style="@style/settings_activity_viewtextstyle"
                android:text="@string/support_name" />

            <ImageButton
                android:id="@+id/button_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_group" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llagreement"
            style="@style/setings_activity_llbutton">

            <TextView
                style="@style/settings_activity_viewtextstyle"
                android:text="@string/user_agreement" />

            <ImageButton
                android:id="@+id/button_useragreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_arrow_forward_ios_24" />

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>