<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.audioplayer.AudioplayerActivity">

    <View
        android:id="@+id/back"
        style="@style/activity_settings_viewback"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/actplayer_cover"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        tools:background="@drawable/placeholder" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="actplayer_track_name" />

    <TextView
        android:id="@+id/actplayer_track_name"
        style="@style/player_activity_artisttrackname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/actplayer_artist_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Song Name Blablabla" />

    <TextView
        android:id="@+id/actplayer_artist_name"
        style="@style/player_activity_artisttrackname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/actplayer_buttonplay"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Artist Name" />

    <ImageButton
        android:id="@+id/actplayer_buttonplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_play"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/actplayer_tracktime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/button_addtoplaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_add_audio"
        app:layout_constraintBottom_toBottomOf="@id/actplayer_buttonplay"
        app:layout_constraintEnd_toStartOf="@id/actplayer_buttonplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/actplayer_buttonplay" />

    <ImageButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_heart"
        app:layout_constraintBottom_toBottomOf="@id/actplayer_buttonplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/actplayer_buttonplay"
        app:layout_constraintTop_toTopOf="@id/actplayer_buttonplay" />

    <TextView
        android:id="@+id/actplayer_tracktime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="0:30" />

    <TextView
        android:id="@+id/actplayer_duration"
        style="@style/player_activity_textcolumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/actplayer_duration"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_album"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actplayer_album"
        style="@style/player_activity_textcolumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/actplayer_album"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_year"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actplayer_year"
        style="@style/player_activity_textcolumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/actplayer_year"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_genre"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actplayer_genre"
        style="@style/player_activity_textcolumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/actplayer_genre"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_country"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actplayer_country"
        style="@style/player_activity_textcolumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/actplayer_country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/actplayer_countryvalue"
        style="@style/player_activity_textcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="CountryValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/actplayer_genrevalue"
        style="@style/player_activity_textcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:text="GenreValue"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_country"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/actplayer_yearvalue"
        style="@style/player_activity_textcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:text="YearValue"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_genre"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/actplayer_albumvalue"
        style="@style/player_activity_textcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:text="AlbumValue"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="300dp" />

    <TextView
        android:id="@+id/actplayer_durationvalue"
        style="@style/player_activity_textcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:text="DurationValue"
        app:layout_constraintBottom_toTopOf="@+id/actplayer_album"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/bottom_sheet_container"
            android:layout_width="match_parent"
            android:layout_height="505dp"
            android:background="@drawable/bottom_sheet_background"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="505dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Добавить в плейлист"
                android:layout_gravity="center"
                android:textSize="19sp" />

            <ImageButton
                android:id="@+id/button_newbplaylist"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_newplaylist"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>